feat: :art: WIP
Adiciona melhorias no contrato e adiciona tratamento de data no openapi generator
